# monume_vip

./: .dockerignore  .gitignore  CNAME  Dockerfile  ENHANCED_ACTIVE_USERS_FEATURES.md  FORCE_OUT_TEST_GUIDE.md  Procfile  activate_and_run.bat  activate_and_run.ps1  gift_card_email_template.html  nixpacks.toml  requirements.txt  server.py  server_logs.txt  test_api_endpoints.py  verify_server_output.txt
MonuMe_Tracker/: .cursorrules  ADMIN_LOGIN_AND_LOCATION_CREATION_SUMMARY.md  ALL_BUTTONS_WORKING_SUMMARY.md  APPOINTMENT_IMPROVEMENTS.md  AUTHENTICATION_SYSTEM_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DOMAIN_DEPLOYMENT_GUIDE.md  Dockerfile  EMAIL_ENDPOINT_DEPLOYMENT_GUIDE.md  EMAIL_SETUP_GUIDE.md  ENVIRONMENT_SUMMARY.md  POWERSHELL_FIX_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  Procfile  QUICK_START_GUIDE.md  README.md  SIGNOUT_IMPLEMENTATION_SUMMARY.md  activate  activate.bat  activate.fish  activate_powershell_fixed.ps1  activate_windows.bat  add_sample_locations.py  add_sample_users.py  add_test_users_for_tracking.py  app.py  app_backup.py  backfill_demos_from_trinfo.py  check_db.py  check_db_content.py  check_db_schema.py  check_python_env.py  compare_db_vs_api.py  create_test_users.py  debug_server.py  debug_user_creation.py  deploy.py  deploy.sh  direct_db_query.py  (+45 more)
MonuMe_Tracker/.github/: copilot-instructions.md
MonuMe_Tracker/config/: email_config.ini  production.py
MonuMe_Tracker/static/: ActiveUsers.html  Add-Location.html  accessibility-enhancements.js  add-user.html  analytics.html  analytics_converter.html  analytics_old.html  emails.html  (+29 more)
(+49 files in other folders)
