[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monume-tracker"
version = "1.0.0"
description = "MonuMe Tracker Server"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3",
    "flask-sqlalchemy>=3.0.0",
    "werkzeug>=3.1.3",
    "jinja2>=3.1.2",
    "gunicorn>=21.2.0",
    "cryptography>=41.0.3",
    "pdfkit>=1.0.0",
    "pillow>=11.2.1",
    "reportlab>=4.4.1"
]

[tool.pyright]
pythonPath = "C:\\Users\\MonumeQueens\\AppData\\Local\\Programs\\Python\\Python313\\python.exe"
extraPaths = [
    "C:\\Users\\MonumeQueens\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages"
]
venvPath = "."
venv = "venv"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false 